main/default/objects/Set_Time_solution__c/Set_Time_solution__c.object-meta.xml
<CustomObject>
    <label>Set Time (solution)</label>
    <nameField>
        <displayFormat>ST-{0000}</displayFormat>
        <label>Set Time Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Set Times (solution)</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>