main/default/objects/Set_Time_solution__c/fields/Band__c.field-meta.xml
<CustomField>
    <fullName>Band__c</fullName>
    <label>Band</label>
    <referenceTo>Band_solution__c</referenceTo>
    <relationshipLabel>Set Times (solution)</relationshipLabel>
    <relationshipName>Set_Times_solution</relationshipName>
    <relationshipOrder>1</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>