main/default/objects/Set_Time_solution__c/fields/Stage__c.field-meta.xml
<CustomField>
    <fullName>Stage__c</fullName>
    <label>Stage</label>
    <referenceTo>Stage_solution__c</referenceTo>
    <relationshipLabel>Set Times (solution)</relationshipLabel>
    <relationshipName>Set_Times_solution</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>