main/default/objects/Set_Time_solution__c/fields/Time__c.field-meta.xml
<CustomField>
    <fullName>Time__c</fullName>
    <label>Time</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>12:00pm</fullName>
            </value>
            <value>
                <fullName>1:30pm</fullName>
            </value>
            <value>
                <fullName>3:00pm</fullName>
            </value>
            <value>
                <fullName>4:30pm</fullName>
            </value>
            <value>
                <fullName>6:00pm</fullName>
            </value>
            <value>
                <fullName>7:30pm</fullName>
            </value>
            <value>
                <fullName>9:00pm</fullName>
            </value>
            <value>
                <fullName>10:30pm</fullName>
            </value>
            <value>
                <fullName>12:00am</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>